# Secretary

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  CURSOR_RULES.md  DESKTOP_AUTOMATION.md  FREE_VOICE_AGENT.md  JARVIS_PATH_D.md  MEMORY.md  OPENROUTER_INTEGRATION.md  PROJECT.md  README.md  ROADMAP.md  SPRINT_1_REVIEW.md  SPRINT_2_DESIGN.md  SYSTEM_OVERVIEW.md  TECH_STACK.md  TERMINAL_TOOLS.md  TOOL_PLATFORM.md  VOICE_INTEGRATION.md  VOICE_PLATFORM.md  main.py  mic_test.py  pyproject.toml  requirements.txt  voice_cli.py
app/: __init__.py  constants.py
app/api/: router.py
app/application/: __init__.py
app/brain/: __init__.py  context_manager.py  conversation_manager.py  exceptions.py  factory.py  model_router.py  orchestrator.py  planner.py  prompt_manager.py
app/config/: __init__.py  settings.py
app/core/: __init__.py  app.py  exception_mapping.py  lifespan.py  logging.py  middleware_setup.py
app/dependencies/: __init__.py  container.py
app/exceptions/: __init__.py  auth.py  base.py  configuration.py  tool.py  validation.py
app/interfaces/: __init__.py  protocols.py
app/memory/: __init__.py  exceptions.py  factory.py  search.py
app/middleware/: __init__.py  cors.py  error_handling.py  logging.py  (+1 more)
logs/: .gitkeep
scripts/: __init__.py
tests/: __init__.py  conftest.py  test_api.py  test_chat_api.py  test_chat_desktop_api.py  test_chat_memory.py  test_chat_tools_api.py  test_config.py  test_conversation_api.py  test_dependencies.py  test_exceptions.py  test_health.py  test_memory_api.py  test_utils.py  test_voice_websocket.py
(+179 files in other folders)
